<resources>
    <!--App name-->
    <string name="app_name">WeDoo</string>

    <!--Login-->
    <string name="email">Email</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="action_sign_in_short">No account yet? Create one</string>
    <string name="register">Register</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="msg_email_error">Enter a valid email address!</string>
    <string name="msg_password_error">Enter your password!</string>

    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Strings frame -->
    <string name="create_new_task">Create new task</string>
    <string name="todoo_title">Title</string>
    <string name="todoo_description">Description</string>
    <string name="todoo_type">Type</string>
    <string name="todoo_end_date">Deadline</string>
    <string name="new_todoo">New ToDoo</string>
    <string-array name="todo_types">
        <item>Select a type</item>
        <item>Shops</item>
        <item>Tasks</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todoo_items">Items</string>
    <string name="update">Update</string>
    <string name="nothing_to_show">Nothing to show here.</string>
    <string name="save">Save</string>
    <string name="todoo">ToDoo</string>
    <string name="no_todoo">There\'s no ToDoo created.</string>

    <string name="profile">Profile</string>
    <string name="cancel">Cancel</string>
    <string name="add_new">Create</string>

    <string name="err_title_dialog">"Enter a title"</string>
    <string name="err_description_dialog">"Enter a description"</string>
    <string name="err_endDate_dialog">"Enter a date"</string>
    <string name="err_type_dialog">"Enter a type"</string>
    <string name="snack_bar_undo">Undo</string>
    <string name="todoo_deleted">ToDoo deleted!</string>

    <string name="error_permission_not_granted">Permission not granted</string>
    <string name="permission_request_canceled">Permission canceled</string>
    <string name="loadding_image">Loading Image...</string>

    <plurals name="items">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items </item>
    </plurals>

    <!--FormToDo Item Activity-->
    <string name="title_activity">New Task</string>
    <string name="required">Required</string>

    <string name="dialog_delete_Title">Delete ToDoo</string>
    <string name="dialog_delete_really_one">Are you sure?</string>
    <string name="dialog_delete_really">Not all itens are done. Delete ToDoo anyway?</string>
    <string name="search">Search</string>
    <string name="about">About</string>

</resources>

