<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/txtTitleDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_todoo"
                android:textColor="@color/white"
                android:textSize="25sp"/>

        </LinearLayout>

        <EditText
            android:id="@+id/edtTitulo_dialog"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            android:hint="@string/todoo_title"
            android:inputType="textCapSentences"
            android:backgroundTint="@color/colorPrimary"
            android:textColorLink="@color/colorPrimaryDark"
            android:textCursorDrawable="@color/colorPrimary" />

        <EditText
            android:id="@+id/edtDescricao_dialog"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:hint="@string/todoo_description"
            android:inputType="textCapSentences"
            android:backgroundTint="@color/colorPrimary"
            android:textColorLink="@color/colorPrimaryDark"
            android:textCursorDrawable="@color/colorPrimary" />

        <Spinner
            android:id="@+id/spTypeTodo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:backgroundTint="@color/colorPrimary"
            android:textColorLink="@color/colorPrimaryDark"
            android:textCursorDrawable="@color/colorPrimary"
            />

        <EditText
            android:id="@+id/edtEncerramento_dialog"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:inputType="date"
            android:hint="@string/todoo_end_date"
            android:backgroundTint="@color/colorPrimary"
            android:textColorLink="@color/colorPrimaryDark"
            android:textCursorDrawable="@color/colorPrimary" />

</LinearLayout>